2009-04-28  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-info-parser.c: 
	* src/yelp-utils.c: 
	Fix uncompressed info page accesses
	(bug #578350 - patch from parthasarathi susarla)

2009-04-28  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-window.c: 
	* src/yelp-settings.c: 
	* src/yelp-bookmarks.c: 
	* po/POTFILES.in: 
	* data/ui/Makefile.am: 
	* configure.in: 
	* data/ui/yelp.glade (deleted):
	* data/ui/yelp-bookmarks-add.ui (added):
	* data/ui/yelp-bookmarks.ui (added):
	* data/ui/yelp-open-location.ui (added):
	* data/ui/yelp-preferences.ui (added):
	Port from glade to GtkBuilder
	(Thomas Andersen - bug #579894)
	
2009-04-27  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-window.c: 
	Replacing syncronous spawn functions by a simple 
	gtk_show_uri (fixes bug #561404 - patch from
	Lincon de Sousa)

2009-04-08  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-transform.c:
	- Patched memory leak, bug #578372, from Machael Chudobiak

2009-04-08  Shaun McCance  <shaunm@gnome.org>

	* src/info2html/Makefile.am:
	* src/info2html/html.c:
	* src/info2html/html.h:
	* src/info2html/main.c:
	* src/info2html/utils.c:
	* src/info2html/utils.h:
	* src/man2html/Makefile.am:
	* src/man2html/README:
	* src/test-pager.c:
	* src/yelp-db-pager.c:
	* src/yelp-db-pager.h:
	* src/yelp-db-print-pager.c:
	* src/yelp-db-print-pager.h:
	* src/yelp-info-pager.c:
	* src/yelp-info-pager.h:
	* src/yelp-man-pager.c:
	* src/yelp-man-pager.h:
	* src/yelp-pager.c:
	* src/yelp-pager.h:
	* src/yelp-search-pager.c:
	* src/yelp-search-pager.h:
	* src/yelp-toc-pager.c:
	* src/yelp-toc-pager.h:
	* src/yelp-xslt-pager.c:
	* src/yelp-xslt-pager.h:
	- Removing old files

2009-04-08  Pedro Fragoso  <ember@ubuntu.com>

	* src/gtkentryaction.c:
	* src/gtkentryaction.h:
	* src/yelp-bookmarks.c:
	* src/yelp-bookmarks.h:
	* src/yelp-main.c:
	* src/yelp-print.h:
	* src/yelp-settings.h:
	* src/yelp-window.h:
	GNOME Goal: Clean up GLib and GTK+ includes (Closes: #563865)
