@@ -1,3 +1,9 @@
+2009-04-29  Don Scorgie  <dscorgie@svn.gnome.org>
+
+	* src/yelp-utils.c: 
+	* src/yelp-window.c: 
+	Fix a bundle of memory leaks
+
 2009-04-28  Don Scorgie  <dscorgie@svn.gnome.org>
 
 	* src/yelp-info-parser.c: 
